# military_manager-

./: .env.example  .gitignore  Dockerfile  README.md  config.toml  entrypoint.sh  migrate_to_supabase.py  requirements.txt
.streamlit/: config.toml
military-github/: app.py  pyproject.toml  requirements.txt  start.bat
military-github/data/: military.db  military.db-shm  military.db-wal
military-github/src/military_manager/: config.py  database.py  logger.py  main.py
military-github/src/military_manager/components/: __init__.py  auth.py  filters.py  navigation.py  rtl.py
military-github/src/military_manager/pages/: availability.py  constraints.py  daily_status.py  drivers.py  equipment.py  home.py  periods.py  requests_page.py  settings.py  shifts.py  soldiers.py  tasks.py  users.py
military-github/src/military_manager/services/: auth_service.py  backup_service.py  constraint_service.py  driver_service.py  period_service.py  report1_import.py  stats_service.py  status_service.py
src/military_manager/: config.py  database.py  logger.py  main.py
src/military_manager/components/: auth.py  filters.py  navigation.py
src/military_manager/models/: schemas.py
src/military_manager/pages/: __init__.py  constraints.py  daily_status.py  drivers.py  equipment.py  home.py  org_tree.py  periods.py  profile.py  qualifications.py  report1.py  reports.py  requests_page.py  settings.py  shifts.py  soldiers.py  tasks.py  users.py
src/military_manager/services/: auth_service.py  backup_service.py  briefing_service.py  company_service.py  equipment_service.py  (+6 more)
