[project]
name = "military-manager"
version = "0.1.0"
description = "מערכת לניהול כוח אדם במילואים - שיבוץ למשימות, ניהול יציאות, חלוקת תפקידים"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.0",
    "streamlit-option-menu>=0.3.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
